# Projeto_FinalV1_pythonAnywhere

./: .gitignore  CODIGOS USADOS NO PYTHONANYWHERE.txt  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/tweets/: models.py  serializers.py  urls.py  views.py
backend/twitter_clone/: settings.py
backend/users/: models.py  serializers.py  urls.py  views.py
frontend/: .gitignore  package.json
frontend/src/components/: TweetBox.tsx
frontend/src/components/tweet/: Tweet.tsx  TweetList.tsx
frontend/src/hooks/: useAuth.ts  useTweets.ts
frontend/src/pages/: Feed.tsx  Profile.tsx  Signup.tsx
users/: backend.py  managers.py  models.py  serializers.py  urls.py  views.py
